--- a/00-frontend-react/src/styles/tailwind.css
+++ b/00-frontend-react/src/styles/tailwind.css
@@ -21,6 +21,29 @@
     --border-primary: #b3b3b3;
     --border-secondary: #f2010126;
   }
+
+  html {
+    scroll-behavior: smooth;
+  }
+
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: #f3f4f6;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: linear-gradient(to bottom, #3b82f6, #9333ea);
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(to bottom, #2563eb, #7e22ce);
+  }
 }
 
 @layer utilities {
